fixed scrollbar color

--- a/src/style.scss
+++ b/src/style.scss
@@ -187,11 +187,11 @@ kbd, .text-pink, .h6 {
 
 
 html {
-  --scrollbarBG: var(----bs-teal-900);
-  --thumbBG: var(--bs-teal);
+  --scrollbarBG: var(--bs-teal-900);
+  --thumbBG: var(--bs-teal-600);
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 15px;
 }
 
@@ -200,11 +200,11 @@ body {
   scrollbar-color: var(--thumbBG) var(--scrollbarBG);
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: var(--scrollbarBG);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: var(--thumbBG);
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
